@@ -1,3 +1,8 @@
+2007-03-28  Richard Purdie  <rpurdie@openedhand.com>
+
+	* psplash.c:
+	Add support for negative progress values
+
 2007-02-16  Matthew Allum  <mallum@openedhand.com>
 
 	* README:
